--- a/assets/stylesheet/style.css
+++ b/assets/stylesheet/style.css
@@ -12,7 +12,7 @@ body{
 /* css for the background */
 .main{
     background-color: hsl(0, 100%, 74%) ;
-    background-image: url(assets/image/bg-intro-desktop.png);
+    background-image: url(../image/bg-intro-desktop.png);
     background-repeat: no-repeat;
     background-position: center;
     background-size: cover;
@@ -223,7 +223,7 @@ body{
 /* css for mobile responsiveness */
 @media screen and (max-width:800px) {
     .main{
-        background-image: url(/assets/image/bg-intro-mobile.png);
+        background-image: url(../image/bg-intro-mobile.png);
     }
 
     .main-box{
